# terrainium

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  terrain-none.zsh  terrain.toml
docs/: BEHAVIOR.md  CONFIGS.md  Roadmap.md  TERRAIN.md  Testing.md  testing.md
example_configs/: terrain.default.toml  terrain.empty.toml  terrain.example.toml  terrain.full.toml  terrain.without.biomes.toml
proto/: buf.yaml
proto/terrainium/v1/: activate.proto  command.proto  common.proto  deactivate.proto  execute.proto  status.proto
schema/: terrain-schema.json  terrainium-conf-schema.json  terrainiumd-conf-schema.json
scripts/: rc_contents  setup-vc-hooks  terrainium_init
scripts/hooks/: pre-commit  pre-push
src/: client.rs  common.rs  daemon.rs  lib.rs
src/client/: args.rs  handlers.rs  logging.rs  old_utils.rs  shell.rs  test_utils.rs  tui.rs  types.rs  utils.rs  validation.rs
src/client/handlers/: background.rs  construct.rs  destruct.rs  edit.rs  enter.rs  exit.rs  generate.rs  get.rs  init.rs  schema.rs  status.rs  update.rs  validate.rs
src/client/shell/: zsh.rs
src/client/test_utils/: assertions.rs  constants.rs
src/client/test_utils/assertions/: client.rs  command.rs  executor.rs  terrain.rs  zsh.rs
src/client/types/: biome.rs  client.rs  command.rs  commands.rs  config.rs  context.rs  environment.rs  proto.rs  terrain.rs
src/common/: constants.rs  execute.rs  run.rs  shell.rs  test_utils.rs  types.rs  utils.rs
src/common/constants/: errors.rs
src/common/shell/: zsh.rs
src/common/types/: biome.rs  command.rs  commands.rs  environment.rs  history.rs  paths.rs  pb.rs  socket.rs  styled.rs  styles.rs  terrain.rs  terrain_state.rs  test_utils.rs
src/daemon/: args.rs  connection.rs  handlers.rs  listener.rs  logging.rs  mod.rs  service.rs  start.rs  types.rs
src/daemon/handlers/: activate.rs  construct.rs  deactivate.rs  execute.rs  run.rs  status.rs  status_poll.rs
src/daemon/service/: darwin.rs  linux.rs
src/daemon/types/: client_status.rs  config.rs  context.rs  daemon.rs  daemon_socket.rs  history.rs  mod.rs  server_socket.rs  state.rs  state_file.rs  state_manager.rs  status.rs  terrain_state.rs
src/handlers/: args.rs  build.rs  constants.rs  construct.rs  deconstruct.rs  edit.rs  enter.rs  exit.rs  generate.rs  get.rs  helpers.rs  init.rs  mod.rs  schema.rs  status.rs  update.rs
src/helpers/: constants.rs  helpers.rs  mod.rs  operations.rs  utils.rs
src/parser/: args.rs  helpers.rs  mod.rs  terrain.rs
src/scripts/: com.csd1100.terrainium.plist  terrainium_init.zsh
src/shell/: background.rs  editor.rs  execute.rs  mod.rs  process.rs  zsh.rs
src/templates/: get.rs
src/types/: aliases.rs  args.rs  biomes.rs  commands.rs  errors.rs  executor.rs  get.rs  mod.rs  socket.rs  terrain.rs
templates/: constructors.hbs  destructors.hbs  env.hbs  get.hbs  get_aliases.hbs  get_constructors.hbs  get_destructors.hbs  status.hbs  zsh_aliases.hbs  zsh_constructors.hbs  zsh_destructors.hbs  zsh_env.hbs  zsh_final_script.hbs
terrain/: Cargo.toml
terrain/src/: args.rs  constants.rs  context.rs  logging.rs  main.rs
terrain/src/shell/: mod.rs  zsh.rs
terrain/src/test_helpers/: mod.rs  test_zsh.rs
terrain/src/types/: biome.rs  commands.rs  environment.rs  mod.rs  terrain.rs
terrainium-build/: Cargo.toml
terrainium-lib/: Cargo.toml  build.rs
terrainium-lib/src/: command.rs  constants.rs  executor.rs  lib.rs  version.rs
terrainium-lib/src/test_utils/: execute.rs  mod.rs
terrainiumd/: Cargo.toml
tests/data/: com.csd1100.terrainium.plist  terrain-default.rendered  terrain-empty.rendered  terrain-example_biome.example.example_biome.updated.zsh  terrain-example_biome.example.none.updated.zsh  terrain-example_biome.example.updated.none.zsh  terrain-example_biome.example.updated.zsh  terrain-example_biome.example.zsh  terrain-example_biome.json  terrain-example_biome.rendered  terrain-example_biome.zsh  terrain-example_biome2.example.zsh  terrain-example_biome2.zsh  terrain-none.empty.zsh  terrain-none.example.none.updated.zsh  terrain-none.example.updated.zsh  terrain-none.example.zsh  terrain-none.zsh  terrain.empty.auto_apply.all.toml  terrain.empty.toml  terrain.example.auto_apply.all.toml  terrain.example.auto_apply.background.toml  terrain.example.auto_apply.enabled.toml  terrain.example.auto_apply.replace.toml  terrain.example.comments.spaces.toml  terrain.example.comments.toml  terrain.example.example_biome.updated.toml  terrain.example.new.example_biome2.toml  terrain.example.none.updated.toml  terrain.example.toml  terrain.example.updated.none.toml  terrain.example.updated.toml  terrain.example.without.background.auto_apply.background.toml  terrain.example.without.default.toml  terrain.full.changed.default.toml  terrain.full.new.example_biome3.toml  terrain.full.toml  terrain.full.updated.example_biome2.toml  terrainium.service  terrainium_init-release.zsh  (+1 more)
tests/scripts/: exit_with_1  print_num_for_10_sec
