[package]
name = "terrainium"
version = "0.1.0"
edition = "2021"
default-run = "terrain"
build = "build.rs"

[features]
terrain-schema = ["schemars"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
handlebars = "6.3.2"
home = "0.5.11"
mockall_double = "0.3.1"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
time = { version = "0.3.41", features = ["local-offset", "formatting"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "local-time"] }
tracing-appender = { version = "0.2.3" }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "process", "fs", "time", "signal"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
uuid = { version = "1.17.0", features = ["v4"] }
regex = "1.11.1"
toml_edit = "0.22.27"
tokio-util = "0.7.15"

[dependencies.schemars]
version = "0.9.0"
optional = true
features = ["preserve_order", "indexmap2"]

[dev-dependencies]
mockall = { version = "0.13.1" }
serial_test = "3.2.0"
tempfile = "3.20.0"

[build-dependencies]
anyhow = "1.0.98"
prost-build = "0.14.1"
