[package]
name = "terrain"
description.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true


[dependencies]
terrainium-lib = { path = "../terrainium-lib" }
const-str.workspace = true
home.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
terrainium-lib = { path = "../terrainium-lib", features = ["test-exports"] }
tempfile.workspace = true
serial_test.workspace = true
pretty_assertions.workspace = true
