[package]
name = "terrainium-lib"
description.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[features]
test-exports = ["mockall"]

[dependencies]
clap.workspace = true
anyhow.workspace = true
const-str = "0.6.2"
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall.workspace = true
serial_test.workspace = true

[build-dependencies]
anyhow.workspace = true
